# Data-Structures-and-Algorithms

./: .gitignore  CMakeLists.txt  README.md
0 - General Theory/: 0 - COMPLEXITY.md  1 - INVARIANT.md  1.0 - COMPLEXITY NOTATION.md  1.1 - COMPLEXITY EVAL.md  2 - SOLVING OCCURRENCES.md  COMPLEXITY.md
1 - Dictionary/: 0 - DICTIONARY.md  1 - SORTED ARRAYS.md  2 - CONNECTED STRUCTURES  DICTIONARY.md
10 - NP/: 0 - INTRO PROBLEMS.md  0 - NP-Complete.md  1 - DECISION P CLASSES.md  1 - DECISION P.md  2 - NPC.md  3 - COOK.md  4 - CASES.md  4 - COUNTER NPC.md
2 - Tree/: 0 - TREE.md  1 - BINARY TREE.md  2 - FATHERS' VECTOR  2 - FATHERS' VECTOR.md  3 - POSITIONAL VECTOR.md  4 - CONNECTED STRUCTURES.md  4.1 - CONNECTED STRUCTURES .md  4.2 - CONNECTED STRUCTURES.md  4.3 - CONNECTED STRUCTURES.md  4.4 - VISITS.md  4.5 - FACTORIZABLE.md  5 - BALANCED BT.md  5 - BST.md  6 - BALANCED TREEs.md  6 - BST.md  7 - AVL TREE.md  7 - RECAP.md  9 - RB TREE.md  LeftChildRightSibling.cpp  LeftChildRightSibling.h  Tree.cpp  Tree.h
3 - Sorting/: 0 - SORTING.md  1 - INSERTION SORT.md  2 - MERGE SORT.md  3 - QUICK SORT.md  4 - HEAP SORT.md  5 - COUNTING SORT.md  6 - RADIX SORT.md  8 - RECAP.md  countingsort.c  heapsort .cpp  insertionsort.cpp  mergesort.c  quicksort.cpp  sorting.cpp  sorting.h
4 - Heap/: 0 - HEAP.md  heap.cpp  heapv1.cpp
5 - Priority Queue/: 0 - PRIORITY QUEUE.md
6 - Hashtable/: 0 - HASHTABLE.md
6 - Table/: 0 - TABLE.md  1 - HASHTABLE.md  2 - CLOSED ADDRESSING.md  3 - OPEN ADDRESSING.md  4 - HASH FUNCTION.md
7 - Dynamic Programming/: 0 - DYNAMIC PROGRAMMING.md  1 - ROD CUTTING.md  2 - LONGEST COMMON SUBSEQUENCE.md  rodcutting.cpp
8 - Graphs/: 0 - DIRECTED GRAPH.md  0 - GRAPH.md  1 - ADJACENCY LIST.md  1 - GRAPH PROPERTIES pt1.md  1 - GRAPH PROPERTIES pt2.md  1 - GRAPH PROPERTIES pt3.md  1 - GRAPH PROPERTIES.md  1.0 - GRAPH PROPERTIES pt1.md  1.1 - GRAPH PROPERTIES pt2.md  1.2 - GRAPH PROPERTIES pt3.md  11 - FLOYD-WARSHALL.md  2 - ADJACENCY LIST.md  3 - ADJACENCY MATRIX.md  4 -  INCIDENCE MATRIX.md  6.0 - TREE.md  6.1 - MST.md  6.2 - DISJOINT SET ADT.md  6.3 - KRUSKAL.md  6.4 - PRIM.md  7 - KRUSKAL.md  7.0 - SHORTEST PATH.md  7.1 - SP PROPERTIES.md  7.2 - DIJKSTRA.md  7.3 - BELLMAN-FORD.md  8 - PRIM.md  8.0  - FLOYD-WARSHALL.md  9.0 - RECAP.md  9.1 - RECAP.md
9 - Greedy Algorithms/: 0 - GREEDY.md  1 - MAX CLIQUE.md  1.0 - MAX CLIQUE.md  1.1 - GREEDY CLIQUE.md
Assignment/: Assignment.txt  Esercitazione1.md  README.md
Assignment/1 - Assignment/: exercise1.cpp
Assignment/1 - First/: ex1.cpp  ex4.cpp
Assignment/first_assignment/: ex_1.cpp  ex_2.cpp  ex_3.cpp  ex_4.cpp  ex_5.cpp  first_assignment.h  main.cpp
Exercises/: Exercises.cpp  rename.cpp  tree.cpp  tree.h  tree1.cpp
Exercises/Test/: main.cpp
(+135 files in other folders)
